--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devsofpixel7/notificared",
+    "name": "devsofpixel7/notificare",
     "description": "Notificare API wrapper",
     "type": "library",
     "license": "MIT",
